# ID-card-OCR-with-google-cloud-vison-API

./: .gitignore  Dockerfile  README.md  docAI.py  field_extractors.py  id_parser.py  layout_utils.py  main.py  ocr_utils.py  pyproject.toml  requirements.txt  test.py  test2.py
data/: .gitignore
